# SurveiLens

./: .env  .env.example  .gitignore  ARCHITECTURE.md  DEMO_SETUP.md  IMPLEMENTATION_SUMMARY.md  TEST_RESULTS.md  VULTR_DEPLOYMENT.md  alerts.jsonl  audio_segments.jsonl  danger_yolo_live.py  docker-compose.yml  index.html  mediamtx.yml  requirements.txt  server.py
SurveiLens-auth0-fixed/: README-AUTH0.md  README.md  package-lock.json
SurveiLens-auth0-fixed/auth0/: post_login_action.js
SurveiLens-auth0-fixed/backend/: app.py  auth0_jwt.py  config.py  elevenlabs_io.py  neuralseek_client.py  requirements.txt  solana_io.py
SurveiLens-auth0-fixed/backend/models/: cv_detector.py  reid.py  scoring.py
SurveiLens-auth0-fixed/backend/schemas/: contracts.py
SurveiLens-auth0-fixed/capture/: edge_capture.py
SurveiLens-auth0-fixed/frontend/: index.html  package-lock.json  package.json
SurveiLens-auth0-fixed/frontend/src/: App.tsx  main.tsx  routes.tsx
SurveiLens-auth0-fixed/frontend/src/components/: AlertCard.tsx  ClipViewer.tsx  LogsBox.tsx  Navbar.tsx  ReceiptPanel.tsx  VideoTile.tsx
SurveiLens-auth0-fixed/frontend/src/lib/: api.ts  auth0.ts  config.ts
SurveiLens-auth0-fixed/frontend/src/pages/: Ask.tsx  Home.tsx  Policy.tsx  Reports.tsx  Review.tsx  ReviewQueue.tsx  UserHome.tsx
SurveiLens-auth0-fixed/frontend/src/styles/: theme.css
SurveiLens-auth0-fixed/scripts/: api.service  demo_post_observe.py  worker.service
SurveiLens-auth0-fixed/sql/: snowflake_schema.sql
backend/: .env  .env.example  README.md  app.py  auth0_jwt.py  danger_yolo_live.py  heuristics.py  ns_test.py  policy.py  requirements.txt  server.py  snowflake_io.py  storage.py  tasks.py
backend/control-plane/: Cargo.toml  Dockerfile  build.rs
backend/control-plane/.bak/: Cargo.toml.broken  api_mod.rs.broken  build.rs.bak  grpc_client_mod.rs.broken  main.rs.broken  mod.rs.broken  policy_mod.rs.broken
backend/control-plane/proto/: pipeline.proto
backend/control-plane/src/: main.rs
backend/control-plane/src/alerts/: mod.rs
backend/control-plane/src/api/: mod.rs
backend/control-plane/src/cns/: mod.rs
backend/control-plane/src/grpc_client/: mod.rs
backend/control-plane/src/jsonlog/: mod.rs
backend/control-plane/src/policy/: mod.rs
backend/control-plane/src/proto/: mod.rs
backend/control-plane/src/stt/: mod.rs
backend/models/: audio_analyzer.py
backend/scripts/: export_to_onnx.py
backend/video-core/: CMakeLists.txt  Dockerfile
backend/video-core/include/: common.hpp  events.hpp  health.hpp  pipeline_audio.hpp  pipeline_video.hpp  postprocess.hpp  server_grpc.hpp
backend/video-core/proto/: pipeline.proto
backend/video-core/src/: detector.cpp  detector.hpp  events.cpp  health.cpp  main.cpp  pipeline_audio.cpp  pipeline_video.cpp  postprocess.cpp  server_grpc.cpp
capture/: k3_graph.json  single_cam.py
edge-node/: CMakeLists.txt  README.md
edge-node/include/: config.hpp  event_publisher.hpp  frame_buffer.hpp  frame_types.hpp  inference_engine.hpp  rtsp_streamer.hpp  server_app.hpp  tracker.hpp
edge-node/src/: config.cpp  event_publisher.cpp  frame_buffer.cpp  inference_engine.cpp  main.cpp  rtsp_streamer.cpp  server_app.cpp  server_main.cpp  tracker.cpp
frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
frontend/public/: control.html  index.html
frontend/public/assets/: styles.css
frontend/public/js/: alerts-page.js  control-page.js  env.js  ui-helpers.js
frontend/src/: App.tsx  main.tsx  routes.tsx  vite-env.d.ts
frontend/src/api/: client.ts
frontend/src/components/: AlertCard.tsx  BackButton.tsx  Badge.module.css  Badge.tsx  Button.module.css  Button.tsx  GlassPanel.module.css  GlassPanel.tsx  Input.module.css  Input.tsx  Layout.module.css  Layout.tsx  MetricsPanel.tsx  Modal.module.css  Modal.tsx  Navbar.tsx  RadarBackground.tsx  index.ts
frontend/src/hooks/: index.ts  useCameraStream.ts  useServers.ts  useStreamManager.ts  useTriage.ts
frontend/src/lib/: sse.ts  state.ts
frontend/src/pages/: Ask.tsx  Audit.tsx  Home.tsx  Policy.tsx  Reports.tsx  ReviewQueue.tsx  ServerAnalyze.tsx  ServerCreate.tsx  UserHome.tsx
frontend/src/routes/: AddServer.module.css  AddServer.tsx  Alerts.module.css  Alerts.tsx  Debug.module.css  Debug.tsx  Edit.module.css  Edit.tsx  Home.module.css  Home.tsx  MyServers.module.css  MyServers.tsx  ServerLayout.module.css  ServerLayout.tsx  Stream.module.css  Stream.tsx  VideoUpload.module.css  VideoUpload.tsx  index.ts
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
public/: alerts.html
public/js/: home-page.js  pipeline-api.js  webrtc.js
scripts/: seed_transcripts.py
worker/: worker_main.py
